--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="12"
         android:targetSdkVersion="21" />
 
     <application
@@ -16,6 +16,12 @@
         <activity android:name=".domain.view.DescriptionScreen"></activity>
         <activity android:name=".domain.view.ListScreen"></activity>
         <activity android:name=".domain.view.SplashScreen"></activity>
+        <activity android:name=".domain.view.RankingList">
+            <intent-filter> 
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" /> 
+                </intent-filter>
+        </activity>
     </application>
 
 </manifest>
