modificando layouts do ranking e adicionando butões

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,14 @@
         <activity android:name=".domain.view.AboutAkanScreen"></activity>
         <activity android:name=".domain.view.DescriptionScreen"></activity>
         <activity android:name=".domain.view.ListScreen"></activity>
-        <activity android:name=".domain.view.SplashScreen"></activity>
-        <activity android:name=".domain.view.RankingList">
-            <intent-filter> 
+        <activity android:name=".domain.view.SplashScreen"><intent-filter> 
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" /> 
                 </intent-filter>
+            
+        </activity>
+        <activity android:name=".domain.view.RankingList">
+            
         </activity>
     </application>
 
