--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,11 +6,15 @@
     <uses-sdk
         android:minSdkVersion="12"
         android:targetSdkVersion="20" />
-
+    
+ 	<uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/launch"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@android:style/Theme.WithActionBar">
         <activity android:name=".domain.view.AboutAkanScreen"></activity>
         <activity android:name=".domain.view.DescriptionScreen"></activity>
