--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:targetSdkVersion="20" />
     
  	<uses-permission android:name="android.permission.INTERNET" />
-     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
     <application
         android:allowBackup="true"
@@ -16,27 +16,24 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@android:style/Theme.WithActionBar">
+        
         <activity android:name=".domain.view.AboutAkanScreen"></activity>
         <activity android:name=".domain.view.DescriptionScreen"></activity>
         <activity
              android:name=".domain.view.ListScreen"
-             android:launchMode="singleTask"
-            
-            >
+             android:launchMode="singleTask" >
             <intent-filter>
                  <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-             <meta-data android:name="android.app.searchable"
-                   android:resource="@xml/searchable"/>
-                       
-        </activity>
-        <activity android:name=".domain.view.SplashScreen"><intent-filter> 
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" /> 
-                </intent-filter>
-            
+            <meta-data android:name="android.app.searchable"
+                  android:resource="@xml/searchable" />           
         </activity>
         
+        <activity android:name=".domain.view.SplashScreen" >
+            <intent-filter> 
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" /> 
+            </intent-filter>
+        </activity>
     </application>
-
 </manifest>
