--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/launch"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@android:style/Theme.WithActionBar">
