--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,10 +12,15 @@
     
     <application
         android:allowBackup="true"
+        android:logo="@drawable/logo"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@android:style/Theme.WithActionBar">
+        
+        android:vmSafeMode="true"       
+        android:allowClearUserData="true"
+        android:hardwareAccelerated="true"
+        android:theme="@style/CustomActionBarTheme">
         
         <activity android:name=".domain.view.AboutAkanScreen"></activity>
         <activity android:name=".domain.view.DescriptionScreen"
