--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.visualize.akan"
     android:versionCode="1"
@@ -6,44 +7,49 @@
     <uses-sdk
         android:minSdkVersion="13"
         android:targetSdkVersion="20" />
-    
- 	<uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+
     <application
         android:allowBackup="true"
-        android:logo="@drawable/logo"
+        android:allowClearUserData="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:largeHeap="true"
-        
-        android:vmSafeMode="true"       
-        android:allowClearUserData="true"
-        android:hardwareAccelerated="true"
-        android:theme="@style/CustomActionBarTheme">
-        
-        <activity android:name=".domain.view.AboutAkanScreen"></activity>
-        <activity android:name=".domain.view.QuotaGraphScreen"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" />
-        <activity android:name=".domain.view.DescriptionScreen"
-          android:theme="@android:style/Theme.Holo.Light.NoActionBar" ></activity>
+        android:logo="@drawable/logo"
+        android:theme="@style/CustomActionBarTheme"
+        android:vmSafeMode="true" >
+        <activity android:name=".domain.view.AboutAkanScreen" />
         <activity
-             android:name=".domain.view.ListScreen"
-             android:launchMode="singleTask"
-             android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            android:name=".domain.view.Configurations"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
+        <activity
+            android:name=".domain.view.QuotaGraphScreen"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" />
+        <activity
+            android:name=".domain.view.DescriptionScreen"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" />
+        <activity
+            android:name=".domain.view.ListScreen"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
             <intent-filter>
-                 <action android:name="android.intent.action.SEARCH" /> 
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                  android:resource="@xml/searchable" />           
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
-        
-        <activity android:name=".domain.view.SplashScreen" 
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-            <intent-filter> 
+        <activity
+            android:name=".domain.view.SplashScreen"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" /> 
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
