--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:logo="@drawable/logo"
         android:theme="@style/CustomActionBarTheme"
         android:vmSafeMode="true" >
+        <meta-data 
+            android:name="com.facebook.sdk.ApplicationId" 
+            android:value="@string/facebook_app_id"/>
         <activity 
             android:name=".domain.view.AboutAkanScreen" 
             android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
@@ -52,6 +55,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.facebook.FacebookActivity"
+          android:configChanges=
+                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+          android:theme="@android:style/Theme.Translucent.NoTitleBar"
+          android:label="@string/app_name" />
     </application>
 
 </manifest>
