--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,11 @@
                  "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
           android:theme="@android:style/Theme.Translucent.NoTitleBar"
           android:label="@string/app_name" />
+    	
+        <provider android:authorities="com.facebook.app.FacebookContentProvider394663470723879"
+          android:name="com.facebook.FacebookContentProvider"
+          android:exported="true" />
+    
     </application>
-
+    
 </manifest>
